--- a/redirect/013/c/redirect.html
+++ b/redirect/013/c/redirect.html
@@ -4,15 +4,15 @@
 <meta charset="UTF-8" />
 <title> LaunchPad Crew </title>
 <script>
+var error == (myValue === 'true');
+
 if(error == true){
 
-    // Your application has indicated there's an error
     window.setTimeout(function(){
 
-        // Move to a new location or you can do something else
         window.location.href = "//menu.net.gvsg.cf/codec/launchpad.htm";
 
-    }, 1750);
+    }, 1000);
 
 }
 </script>
