--- a/redirect/013/c/redirect.html
+++ b/redirect/013/c/redirect.html
@@ -4,20 +4,18 @@
 <meta charset="UTF-8" />
 <title> LaunchPad Crew </title>
 <script>
-var error == (myValue === 'true');
+var 
+function onLoad(){
+setTimeout(
+redirectModule() {
+window.location.replace("//menu.net.gvsg.cf/codec/index.php");
 
-if(error == true){
-
-    window.setTimeout(function(){
-
-        window.location.href = "//menu.net.gvsg.cf/codec/launchpad.htm";
-
-    }, 1000);
-
+window.location.href = "//menu.net.gvsg.cf/codec/index.php";
+    }, 1750);
 }
 </script>
 </head>
-<body>
+<body onload="onLoad();">
 <img src="loading.gif" rel="Loading...">
 <h4> Redirecting to MenuNet... </h4>
 </body>
