--- a/redirect/013/c/redirect.html
+++ b/redirect/013/c/redirect.html
@@ -4,17 +4,10 @@
 <meta charset="UTF-8" />
 <title> LaunchPad Crew </title>
 <script>
-function onLoad(){
-setTimeout(
-redirectModule() {
-window.location.replace("//menu.net.gvsg.cf/codec/index.php");
-
-window.location.href = "//menu.net.gvsg.cf/codec/index.php";
-    }, 1750);
-}
+setTimeout(function(){window.location.href="//menu.net.gvsg.cf/codec/launchpad.php"},2000);
 </script>
 </head>
-<body onload="onLoad();">
+<body>
 <img src="loading.gif" rel="Loading...">
 <h4> Redirecting to MenuNet... </h4>
 </body>
