--- a/redirect/013/c/redirect.html
+++ b/redirect/013/c/redirect.html
@@ -3,12 +3,20 @@
 <head>
 <meta charset="UTF-8" />
 <title> LaunchPad Crew </title>
+<style>
+#loading {
+margin: auto;
+}
+#header {
+margin: auto;
+}
+</style>
 <script>
 setTimeout(function(){window.location.href="//menu.net.gvsg.cf/codec/launchpad.php"},2000);
 </script>
 </head>
 <body>
-<img src="loading.gif" rel="Loading...">
-<h4> Redirecting to MenuNet... </h4>
+<img src="loading.gif" rel="Loading..." id="loading">
+<h4 id="header"> Redirecting to MenuNet... </h4>
 </body>
 </html>
