--- a/redirect/013/c/redirect.html
+++ b/redirect/013/c/redirect.html
@@ -10,6 +10,8 @@ margin: auto;
 #header {
 margin: auto;
 }
+body {
+background-color: gray;
 </style>
 <script>
 setTimeout(function(){window.location.href="//menu.net.gvsg.cf/codec/launchpad.php"},2000);
