--- a/redirect/013/c/redirect.html
+++ b/redirect/013/c/redirect.html
@@ -18,7 +18,7 @@ setTimeout(function(){window.location.href="//menu.net.gvsg.cf/codec/launchpad.p
 </script>
 </head>
 <body>
-<img src="loading.gif" rel="Loading..." id="loading">
+<img src="loading.gif" rel="Loading..." id="loading" width="750" height="750">
 <h4 id="header"> Redirecting to MenuNet... </h4>
 </body>
 </html>
