--- a/redirect/013/c/redirect.html
+++ b/redirect/013/c/redirect.html
@@ -12,7 +12,7 @@ margin: auto;
 }
 </style>
 <script>
-setTimeout(function(){window.location.href="//menu.net.gvsg.cf/codec/launchpad.php"},2000);
+setTimeout(function(){window.location.href="//menu.net.gvsg.cf/codec/launchpad.htm"},2000);
 </script>
 </head>
 <body>
