--- a/redirect/013/c/takeoff1.html
+++ b/redirect/013/c/takeoff1.html
@@ -16,7 +16,7 @@ setTimeout(function(){window.location.href="//browser.net.gvsg.cf/index.html"},2
 </script>
 </head>
 <body>
-<img src="loading.gif" rel="Loading" id="loading" width="250" height="250">
-<h4 id="header"> Redirecting to MenuNet... </h4>
+<img src="loading.gif" rel="Loading" id="loading" width="250" height="250" align="center">
+<h4 id="header" align="center"> Redirecting to BrowserNet... </h4>
 </body>
 </html>
