--- a/redirect/013/c/takeoff1.html
+++ b/redirect/013/c/takeoff1.html
@@ -5,11 +5,11 @@
 <title> LaunchPad Crew </title>
 <style>
 #loading {
-margin: auto;
+margin: 0 auto;
 float: center;
 }
 #header {
-margin: auto;
+margin: 0 auto;
 float: center;
 }
 </style>
