--- a/redirect/013/c/redirect.html
+++ b/redirect/013/c/redirect.html
@@ -5,10 +5,12 @@
 <title> LaunchPad Crew </title>
 <style>
 #loading {
-margin: auto;
+margin: 0 auto;
+float: center;
 }
 #header {
-margin: auto;
+margin: 0 auto;
+float: center;
 }
 </style>
 <script>
@@ -16,7 +18,9 @@ setTimeout(function(){window.location.href="//menu.net.gvsg.cf/codec/launchpad.h
 </script>
 </head>
 <body>
-<img src="loading.gif" rel="Loading" id="loading" width="250" height="250">
-<h4 id="header"> Redirecting to MenuNet... </h4>
+<div id="content">
+<img src="loading.gif" rel="Loading" id="loading" width="250" height="250" align="center">
+<h4 id="header" align="center"> Redirecting to BrowserNet... </h4>
+</div>
 </body>
 </html>
