--- a/redirect/013/c/redirect.html
+++ b/redirect/013/c/redirect.html
@@ -20,7 +20,7 @@ setTimeout(function(){window.location.href="//menu.net.gvsg.cf/codec/launchpad.h
 <body>
 <div id="content">
 <img src="loading.gif" rel="Loading" id="loading" width="250" height="250" align="center">
-<h4 id="header" align="center"> Redirecting to BrowserNet... </h4>
+<h4 id="header" align="center"> Taking off! </h4>
 </div>
 </body>
 </html>
